# agentic-observatory

./: .gitignore  .pr_agent.toml  .prettierignore  Dockerfile  README.md  eslint.config.js  package-lock.json  package.json  pyproject.toml  tsconfig.json  vite.config.ts
.github/workflows/: request-promotion.yml  test.yml
agentic_observatory/: __init__.py  analysis.py  app.py  clients.py  config.py  coordination.py  db.py  domain.py  github_auth.py  loop_memory.py  security.py
agentic_observatory/static/: styles.css
agentic_observatory/templates/: analysis.html  approvals.html  artifact_detail.html  base.html  case_detail.html  cases.html  change_detail.html  changes.html  cross_loop.html  handoffs.html  index.html  insight_detail.html  insights.html  insights_metrics.html  knowledge.html  login.html  loop_detail.html  loops.html  run_detail.html  runs.html  verification.html
agentic_observatory/templates/partials/: case_table.html  run_table.html
frontend/src/: main.ts
tests/: test_app.py  test_clients_and_analysis.py  test_coordination_and_auth.py
